# library

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  SECURITY_REVIEW.md  compose.secrets.env.example  docker-compose.yml  pyproject.toml
backend/: .env-example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/audit/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/catalog/: admin.py  covers.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/catalog/management/commands/: generate_test_data.py
backend/circulation/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/fines/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/inventory/: admin.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/reports/: permissions.py  tests.py  urls.py  views.py
backend/reservations/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/swagger/: swagger.py
docs/: CI_CD_guide.md  README.md
docs/Информация о проекте/: Apps Archerion.md  Archerion.md  Идеи для усиления проекта.md  Полный_план.md  Происхождение названия.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/_components/: AppShell.tsx  Header.tsx  NavLink.tsx  nav-items.ts
frontend/app/admin/: page.tsx
frontend/app/catalog/: page.tsx
frontend/app/login/: page.tsx
frontend/app/reader/: page.tsx
frontend/app/register/: page.tsx
frontend/archerion/: package.json
healthcheck/: .env  .env-example  Dockerfile  index.html  server.py
(+39 files in other folders)
