[project]
name = "backend"
version = "0.1.0"
description = "Archerion backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.60",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-phonenumber-field>=8.4.0",
    "django-rest-framework>=0.1.0",
    "django-storages>=1.14.6",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "drf-yasg>=1.21.15",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.12",
    "storage>=0.0.4.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
